use Sample dummy html file to test in pipelines

--- a/AxeCoreTest/AxeCoreTest.Tests/AxeCoreTest.Tests.csproj
+++ b/AxeCoreTest/AxeCoreTest.Tests/AxeCoreTest.Tests.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.26.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AxeCoreTest\AxeCoreTest.csproj" />
+  </ItemGroup>
+
 </Project>
