--- a/AxeCoreTest/AxeCoreTest.Tests/AxeCoreTest.Tests.csproj
+++ b/AxeCoreTest/AxeCoreTest.Tests/AxeCoreTest.Tests.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\AxeCoreTest\AxeCoreTest.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Sample.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
